# event-density

./: .gitignore  04.5_SPARC_Table1_2_Filter_Outerpoints_Scatter.xlsx  CHANGELOG.md  CONTRIBUTING.md  CORE_PAPERS.md  Explainers_On_YT-Foundations.txt  Explainers_On_YT-Interpretations.txt  GETTING_STARTED.md  HOW_TO_RUN_ANALOGUES.md  LICENSE  Makefile  README.md  README_Oracle.md  REPRODUCING_FOUNDATIONS_PAPER.md  RESULTS.md  WHAT_IS_ED.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
ED Architecture/: README.md
ED Experiments/: README.md
ED Interpretations/: ED_Interpretations_Chronicle.md  Explainers_On_YT-Foundations.txt  Explainers_On_YT-Interpretations.txt  README.md
ED PAPERS/: README.md
ED Physics/: README.md
ED Simulation/: README.md  analyze_broadband_cascade.py  analyze_low_mode_attractor.py  analyze_modal_hierarchy.py  analyze_overlap_cascade.py  analyze_parameter_sweep.py  analyze_regime_map_2d.py  analyze_regime_volume_3d.py  analyze_three_stage_I.py  analyze_triad_cascade.py  edsim_core.py  edsim_diagnostics.py  edsim_parameters.py  generate_certificate_figure.py
ED Simulations/: ED_Lattice.py  ED_Update_Rule.py  ED_Visualization.py  Run_Simulation.py  Scenario_E_TwoCore.py  plot_D_evolution_n1_sigma002.py  plot_D_phase_exit_surface.py  plot_D_sweep_phase_exit_and_L.py  plot_D_trajectory_morphology.py  plot_final_L_heatmap.py  plot_phase_exit_heatmap.py
ED Validation/: README.md
ED_FrontDoor/: ED_ArXiv_MobilityLaw.md  ED_Falsifiable_Prediction.md  ED_What_It_Does_1pager.md  ED_minimal_demo.ipynb  README.md  generate_channels_schematic.py  generate_mobility_figure.py  generate_pme_similarity_figure.py  generate_slides.py
Reproduce_This_Paper/: ARCHITECTURE_DIAGRAM.md  INDEX.md  README.md
analysis/: ED_SC_2_0_Sample_Size_Audit.md  ED_SC_2_0_r_star_MonteCarlo_Results.md  ED_SC_2_0_r_star_MonteCarlo_Workflow.md  ED_SC_2_0_r_star_Normalization_Audit.md  ED_SC_2_0_r_star_R2_GRF_Tests.md  ED_SC_2_0_r_star_RayForcing_Design.md  ED_SC_2_0_r_star_RayForcing_Results.md  README.md
archive/: README.md
consolidation/: Consolidation_2026_04_30.md
data/: README.md
docs/: ARCHITECTURAL_REVIEW.md  CHANGELOG.md  CORE_PAPERS.md  ED-09-5-Experimental-Strategy.md  ED-09-5-Observable-Sharpening.md  ED-Logic-Flow.md  ED-Math-Pipeline-v6-spec.md  ED-Orientation.md  ED-SC-2.0.md  ED-SC-Clarification-2026-04-17.md  ED-SC-Hessian-Resolution.md  ED-Test-to-Axiom-Mapping-v1.0.md  ED-Testing-Synthesis-2026-04-17.md  ED_Accomplishments.md  ED_Analogies.md  ED_Atlas_Text_Overlays.md  ED_Executive_Overview.md  ED_Narrative_Overview.md  ED_SC_2_0_Cleanup_Changes.md  ED_Vienna_Program_Map.md  HOW_TO_RUN.md  Investigation_Priority_List.md  README.md  api.md  architecture.md  index.md  phys_cosmology.md  phys_phase.md  phys_wave.md  roadmap.md
documents/: CORE_PAPERS.md  README.md  REPO_STRUCTURE.md  RESULTS_OVERVIEW.md
edsim/: README.md  __init__.py  __main__.py  cli.py  version.py
(+1610 files in other folders)
